refactor: implement masked JAR architecture, remove aggregation support
Restructure distribution to use masked JAR as single artifact, implement
runtime accessor registration, remove legacy aggregation support, and
fix agent initialization with bootstrap classloader.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>